--- a/src/template/header.html
+++ b/src/template/header.html
@@ -1,24 +1,12 @@
-<header>
-
-<!-- 	<div class="navbar-header">
-		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
-			<span class="sr-only">Toggle navigation</span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-		</button>
-		<a class="navbar-brand" href="#">Brand</a>
-	</div> -->
-	
-
+<header class="section-header">
 	<nav class="navigation-bar hidden-xs">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-3">
+				<div class="col-xs-3">
 					<a href="/#"><img src="img/logo-top.png" alt="логотип nerds" class="logo"></a>
 					<span class="logo"><span>NЁRDS</span> Design Studio</span>
 				</div>
-				<div class="col-md-7 col-md-offset-1 text-right">
+				<div class="col-xs-8 text-right">
 					<ul class="header-menu">
 						<li class="header-menu-item">
 							<a href="#"><span>Студия</span></a>
@@ -40,20 +28,6 @@
 			</div>
 		</div>
 	</nav>
-
-	<div class="mobile-nav visible-xs-block">
-		<span class="logo"><span>NЁRDS</span> Design Studio</span>
-		<div class="burger-menu">
-			<div class="burger-menu-stick1"></div>
-			<div class="burger-menu-stick2"></div>
-			<div class="burger-menu-stick3"></div>
-		</div>
-	</div>
-
-
-
-
-
 	<div id="headerSlider" class="carousel slide" data-ride="carousel">
 	  <!-- Indicators -->
 	  <ol class="carousel-indicators">
