--- a/src/style/partials/header.scss
+++ b/src/style/partials/header.scss
@@ -1,7 +1,7 @@
-header{
+.section-header {
 	background: $backgrey;
 }
-nav {
+.navigation-bar {
 	padding: 28px 0 53px;	
 	.header-menu-item {
 		display: inline-block;
@@ -12,8 +12,7 @@ nav {
 			display: block;
 			color: #000;
 			font: 14px/30px $medium;
-			// padding: 30px 15px 7px;
-			padding: 15px;
+			padding: 15px 13px;
 			&:hover {
 			text-decoration: none;
 				span {
@@ -93,10 +92,11 @@ span.logo {
 	transition: all .5s;	
 	position: fixed;
 	width: 100%;
+	height: 60px;
+	line-height: 60px;
 	left: 0;
 	top: 0;
-	z-index: 100;
-	border-top: 0;
+	z-index: 2;
 	background: #fff;
 	padding: 0;
 	box-shadow: 0px 5px 5px 0px $lightgrey;
@@ -104,42 +104,14 @@ span.logo {
 		display: none;
 	}
 	& span.logo {
-		display: inline-block;
-		line-height: 60px;
+		display: inline-block;		
+	}
+	& .header-menu-item a {
+		padding: 15px 10px;
 	}
 }
 
-.mobile-nav {
-	background: #fff; 
-	box-shadow: 0px 5px 5px 0px $lightgrey;
-	padding-left: 10px;
-	padding-right: 10px;
-	span.logo {
-		display: inline-block;
-		line-height: 44px;
-		float: left;
-	}
-}
-.burger-menu {
-	display: inline-block;
-	cursor:pointer;
-	&-stick1, &-stick2, &-stick3 {
-		width: 35px;
-	    height: 5px;
-	    background-color: #333;
-	    margin: 6px 0;
-	    transition: 0.4s;
-	}
-	.change &-stick1 {
-		transform: rotate(-45deg) translate(-9px, 6px) ;
-	}
-	.change &-stick2 {
-		opacity: 0;
-	}
-	.change &-stick3 {
-		transform: rotate(45deg) translate(-8px, -8px) ;
-	}
-}
+
 
 
 
@@ -152,12 +124,12 @@ span.logo {
     		display: none;
     	}
     }
-    nav {
+    .navigation-bar {
     	display:none;
-    }
+    }    
 }
 
-@media (min-width: 768px) {
+@media (min-width: 767px) {	
 	.carousel {
 		.item {
 			min-height: 300px;
