--- a/src/style/partials/app.scss
+++ b/src/style/partials/app.scss
@@ -202,7 +202,8 @@ section {
 
 .mobile-nav {
   background: #fff; 
-  box-shadow: 0px 5px 5px 0px $lightgrey;
+  // box-shadow: 0px 5px 5px 0px $lightgrey;
+  box-shadow: 0 4px 2px -2px  $lightgrey;
   position: fixed;
   width: 100%;
   height: 39px;
@@ -237,78 +238,73 @@ section {
   }
 }
 
+
+body {
+  width: 100%;
+  height: 100%;
+}
+
+.slideout-menu {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 256px;
+  min-height: 100vh;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+  z-index: 0;
+  display: none;
+}
+
+.slideout-menu-left {
+  left: 0;
+}
+
+.slideout-menu-right {
+  right: 0;
+}
+
+.slideout-panel {
+  position: relative;
+  z-index: 1;
+  // will-change: transform;
+  background-color: #FFF; /* A background-color is required */
+  min-height: 100vh;
+}
+
+.slideout-open,
+.slideout-open body,
+.slideout-open .slideout-panel {
+  overflow: hidden;
+}
+
+.slideout-open .slideout-menu {
+  display: block;
+}
+.slideout-open .slideout-panel {
+  box-shadow: -10px 0px 10px 1px $lightgrey;
+}
+
 @media (max-width: 767px) {
-  body {
-    width: 100%;
-    height: 100%;
-  }
-
-  .slideout-menu {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    width: 256px;
-    min-height: 100vh;
-    background-color: red;
-    overflow-y: scroll;
-    -webkit-overflow-scrolling: touch;
-    z-index: 0;
-    display: none;
-  }
-
-  .slideout-menu-left {
-    left: 0;
-  }
-
-  .slideout-menu-right {
-    right: 0;
-  }
-
   .slideout-panel {
-    position: relative;
-    z-index: 1;
-    // will-change: transform;
-    background-color: #FFF; /* A background-color is required */
-    min-height: 100vh;
+    padding-top:39px;
   }
+} 
+// #layout-wrapper:after {
+//   content: '';
+//   display: block;
+//   background-color: rgba(0,0,0,0);
+//   transition: background-color 1s ease;
+// }
 
-  .slideout-open,
-  .slideout-open body,
-  .slideout-open .slideout-panel {
-    overflow: hidden;
-  }
-
-  .slideout-open .slideout-menu {
-    display: block;
-  }
-
-  #panel {
-    padding-top: 39px;
-  }
-  #panel::after {
-    content: '';
-    display: block;
-    // background-color: rgba(0,0,0,0);
-    transition: all 0.5s ease-in-out;
-  }
-
-  .panel-open::after {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    width: 100%;
-    background: rgba(0,0,0,.5);
-    z-index: 99;
-  }
-}
-
-@media (min-width: 768px) {
-  #menu {
-    width: 0;
-    display: none;
-  }
-}
-
+// .panel-open:after {
+//   position: absolute;
+//   top: 0;
+//   bottom: 0;
+//   width: 100%;
+//   background-color: rgba(0,0,0,.5)!important;
+//   z-index: 99;
+// }
 
 
 // .icon {
