data-sideout-ignore added

--- a/src/template/header.html
+++ b/src/template/header.html
@@ -28,7 +28,7 @@
 			</div>
 		</div>
 	</nav>
-	<div id="headerSlider" class="carousel slide" data-ride="carousel">
+	<div id="headerSlider" class="carousel slide" data-ride="carousel" data-slideout-ignore>
 	  <!-- Indicators -->
 	  <ol class="carousel-indicators">
 	    <li data-target="#headerSlider" data-slide-to="0" class="active"></li>
