--- a/src/template/shop.html
+++ b/src/template/shop.html
@@ -1,7 +1,7 @@
 <section class="shop">
 	<div class="container">
 
-		<aside>
+		<aside data-slideout-ignore>
 			<div class="price">
 				<h3>Стоимость:</h3>
 				<div class="slide-range-wrapper">
