slideout ignore added to map section

--- a/src/template/map.html
+++ b/src/template/map.html
@@ -1,4 +1,4 @@
-<section class="map">
+<section class="map" data-slideout-ignore>
 	<div class="container">
 		<div class="map-box">
 			<span class="logo"><span>NЁRDS</span> Design Studio</span>
