git push and go home )

--- a/src/template/map.html
+++ b/src/template/map.html
@@ -8,6 +8,6 @@
 			<a href="#" class="btn btn-type-1">Напишите нам</a>
 		</div>
 	</div>
-	<div id="map" class="hidden-xs"></div>
-	<div id="map-mobile" class="visible-xs-block"></div>
+	<div id="map" class="hidden-xs" data-slideout-ignore></div>
+	<div id="map-mobile" class="visible-xs-block" data-slideout-ignore></div>
 </section>
