--- a/src/style/partials/app.scss
+++ b/src/style/partials/app.scss
@@ -85,31 +85,32 @@ label {
 	max-width: 900px;	
 }
 .btn {
+  color: #fff;
+  font: 12px/25px $medium;
+  &:hover, &:active, &:visited {
     color: #fff;
-    font: 12px/25px $medium;
-    &:hover, &:active, &:visited {
-      color: #fff;
-    }
-}
-.btn-type-1 {
+  }
+  &-type-1 {
     background-color: $color1;   
     &:hover {
       background-color: darken( $color1, 10% );
-    }       
-}
-.btn-type-2 {
+    } 
+  }
+  &-type-2 {
     background-color: $color2; 
     &:hover {
       background-color: darken( $color2, 10% );
-    }          
-}
-.btn-type-3 {
-    background-color: $color3;   
+    }
+  }  
+  &-type-3 {
+  background-color: $color3;   
     &:hover {
       background-color: darken( $color3, 10% );
     }         
+  } 
 }
 
+//custom radiobox and checkbox
 .custom-radiobox:not(:checked),
 .custom-radiobox:checked,
 .custom-checkbox:not(:checked),
@@ -199,10 +200,9 @@ section {
     border-bottom: 2px solid #eee;
 }
 
-
+// fixed header only on mobile devices < 768px
 .mobile-nav {
-  background: #fff; 
-  // box-shadow: 0px 5px 5px 0px $lightgrey;
+  background: #fff;
   box-shadow: 0 4px 2px -2px  $lightgrey;
   position: fixed;
   width: 100%;
@@ -239,11 +239,11 @@ section {
 }
 
 
+// styles for slideout - left touch menu
 body {
   width: 100%;
   height: 100%;
 }
-
 .slideout-menu {
   position: fixed;
   top: 0;
@@ -253,21 +253,28 @@ body {
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
   z-index: 0;
+  background: #F7F6F9;
+  padding: 39px 10px;
   display: none;
-}
+  &-left {
+    left: 0;
+  }
+  &-right {
+    right: 0
+  }
+  img {
+    margin-bottom: 50px;
+  }
+  &-menu {
 
-.slideout-menu-left {
-  left: 0;
-}
+  }
 
-.slideout-menu-right {
-  right: 0;
 }
 
 .slideout-panel {
   position: relative;
   z-index: 1;
-  // will-change: transform;
+  will-change: transform;
   background-color: #FFF; /* A background-color is required */
   min-height: 100vh;
 }
@@ -282,7 +289,7 @@ body {
   display: block;
 }
 .slideout-open .slideout-panel {
-  box-shadow: -10px 0px 10px 1px $lightgrey;
+  box-shadow: -10px 0px 10px 1px rgba(0,0,0,0.1);
 }
 
 @media (max-width: 767px) {
@@ -290,21 +297,6 @@ body {
     padding-top:39px;
   }
 } 
-// #layout-wrapper:after {
-//   content: '';
-//   display: block;
-//   background-color: rgba(0,0,0,0);
-//   transition: background-color 1s ease;
-// }
-
-// .panel-open:after {
-//   position: absolute;
-//   top: 0;
-//   bottom: 0;
-//   width: 100%;
-//   background-color: rgba(0,0,0,.5)!important;
-//   z-index: 99;
-// }
 
 
 // .icon {
