--- a/src/style/partials/_sprite.scss
+++ b/src/style/partials/_sprite.scss
@@ -42,17 +42,28 @@ $checkbox-unchecked-total-width: 240px;
 $checkbox-unchecked-total-height: 77px;
 $checkbox-unchecked-image: '../img/sprite.png';
 $checkbox-unchecked: (22px, 32px, -22px, -32px, 20px, 20px, 240px, 77px, '../img/sprite.png', 'checkbox_unchecked', );
+$icon-arrow-name: 'icon-arrow';
+$icon-arrow-x: 65px;
+$icon-arrow-y: 32px;
+$icon-arrow-offset-x: -65px;
+$icon-arrow-offset-y: -32px;
+$icon-arrow-width: 16px;
+$icon-arrow-height: 16px;
+$icon-arrow-total-width: 240px;
+$icon-arrow-total-height: 77px;
+$icon-arrow-image: '../img/sprite.png';
+$icon-arrow: (65px, 32px, -65px, -32px, 16px, 16px, 240px, 77px, '../img/sprite.png', 'icon-arrow', );
 $icon-basket-name: 'icon-basket';
-$icon-basket-x: 81px;
+$icon-basket-x: 99px;
 $icon-basket-y: 32px;
-$icon-basket-offset-x: -81px;
+$icon-basket-offset-x: -99px;
 $icon-basket-offset-y: -32px;
 $icon-basket-width: 16px;
 $icon-basket-height: 13px;
 $icon-basket-total-width: 240px;
 $icon-basket-total-height: 77px;
 $icon-basket-image: '../img/sprite.png';
-$icon-basket: (81px, 32px, -81px, -32px, 16px, 13px, 240px, 77px, '../img/sprite.png', 'icon-basket', );
+$icon-basket: (99px, 32px, -99px, -32px, 16px, 13px, 240px, 77px, '../img/sprite.png', 'icon-basket', );
 $icon-fb-name: 'icon-fb';
 $icon-fb-x: 0px;
 $icon-fb-y: 54px;
@@ -76,31 +87,31 @@ $icon-insta-total-height: 77px;
 $icon-insta-image: '../img/sprite.png';
 $icon-insta: (44px, 32px, -44px, -32px, 19px, 18px, 240px, 77px, '../img/sprite.png', 'icon-insta', );
 $icon-vk-name: 'icon-vk';
-$icon-vk-x: 65px;
+$icon-vk-x: 83px;
 $icon-vk-y: 32px;
-$icon-vk-offset-x: -65px;
+$icon-vk-offset-x: -83px;
 $icon-vk-offset-y: -32px;
 $icon-vk-width: 14px;
 $icon-vk-height: 16px;
 $icon-vk-total-width: 240px;
 $icon-vk-total-height: 77px;
 $icon-vk-image: '../img/sprite.png';
-$icon-vk: (65px, 32px, -65px, -32px, 14px, 16px, 240px, 77px, '../img/sprite.png', 'icon-vk', );
+$icon-vk: (83px, 32px, -83px, -32px, 14px, 16px, 240px, 77px, '../img/sprite.png', 'icon-vk', );
 $sort-down-name: 'sort_down';
-$sort-down-x: 99px;
+$sort-down-x: 117px;
 $sort-down-y: 32px;
-$sort-down-offset-x: -99px;
+$sort-down-offset-x: -117px;
 $sort-down-offset-y: -32px;
 $sort-down-width: 9px;
 $sort-down-height: 9px;
 $sort-down-total-width: 240px;
 $sort-down-total-height: 77px;
 $sort-down-image: '../img/sprite.png';
-$sort-down: (99px, 32px, -99px, -32px, 9px, 9px, 240px, 77px, '../img/sprite.png', 'sort_down', );
+$sort-down: (117px, 32px, -117px, -32px, 9px, 9px, 240px, 77px, '../img/sprite.png', 'sort_down', );
 $spritesheet-width: 240px;
 $spritesheet-height: 77px;
 $spritesheet-image: '../img/sprite.png';
-$spritesheet-sprites: ($browser-panel, $checkbox-checked, $checkbox-unchecked, $icon-basket, $icon-fb, $icon-insta, $icon-vk, $sort-down, );
+$spritesheet-sprites: ($browser-panel, $checkbox-checked, $checkbox-unchecked, $icon-arrow, $icon-basket, $icon-fb, $icon-insta, $icon-vk, $sort-down, );
 $spritesheet: (240px, 77px, '../img/sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
