--- a/src/style/partials/app.scss
+++ b/src/style/partials/app.scss
@@ -265,16 +265,32 @@ body {
   img {
     margin-bottom: 50px;
   }
-  &-menu {
+}
 
+.layout-slideout {  
+  &-menu-item a {
+    display: block;
+    padding: 20px;
+    border-bottom: 2px solid #eee;
+    font-size: 18px;
+    position: relative;
+    &:before {
+      position: relative;
+      display: inline-block;
+      content: "";
+      @include sprite($icon-arrow);  
+      margin-right: 12px;
+    }
   }
-
+  &-menu-item:last-child a:before{
+    @include sprite($icon-basket);  
+  }
 }
 
 .slideout-panel {
   position: relative;
   z-index: 1;
-  will-change: transform;
+  //will-change: transform;
   background-color: #FFF; /* A background-color is required */
   min-height: 100vh;
 }
