--- a/src/template/map.html
+++ b/src/template/map.html
@@ -5,7 +5,7 @@
 			<span class="address">220125, Минск, <br>
 			ул. Городецкая, 22</span>
 			<span class="address">тел. <a href="tel:+375293551080">+375 (29) 355-10-80</a></span>
-			<a href="#" class="btn btn-type-1">Напишите нам</a>
+			<a href="#myModal" class="btn btn-type-1" data-toggle="modal">Напишите нам</a>
 		</div>
 	</div>
 	<div id="map" class="hidden-xs" data-slideout-ignore></div>
