--- a/src/style/partials/shop.scss
+++ b/src/style/partials/shop.scss
@@ -134,6 +134,10 @@
 		&:hover .browser-panel:before {
 			opacity: 1;
 		}
+		&:hover .browser-panel {
+			border-radius: 5px 5px 0 0;
+    		box-shadow: 0 0 3px 5px $lightgrey;
+		}
 		&-description {			
 			position: absolute;
 			top: 30px;
